force-app/main/default/objects/Cost_Sheet_Rollup__c/Cost_Sheet_Rollup__c.object-meta.xml
<CustomObject>
    <label>Cost Sheet Rollup</label>
    <nameField>
        <label>Cost Sheet Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Sheet Rollup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>