force-app/main/default/objects/Cost_Sheet_Rollup__c/fields/Cost_Sheet_Number__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Number__c</fullName>
    <label>Cost Sheet Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>