force-app/main/default/objects/Cost_Sheet_Rollup__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cost Sheet Rollup</relationshipLabel>
    <relationshipName>Cost_Sheet_Rollup</relationshipName>
    <type>Lookup</type>
</CustomField>