force-app/main/default/objects/Cost_Sheet_Rollup__c/fields/Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Revision_Number__c</fullName>
    <label>Revision Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>